--- a/src/Sample.Wasm/Pages/Index.razor
+++ b/src/Sample.Wasm/Pages/Index.razor
@@ -1,9 +1,14 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+@inject NavigationManager Nav
 
-<h1>Hello, world!</h1>
+<PageTitle>Chat</PageTitle>
 
-Welcome to your new app.
+<p>채팅으로 이동 중…</p>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+@code {
+	protected override void OnInitialized()
+	{
+		Nav.NavigateTo("/chat", forceLoad: false);
+	}
+}
