--- a/src/Sample.Wasm/Shared/MainLayout.razor
+++ b/src/Sample.Wasm/Shared/MainLayout.razor
@@ -1,17 +1,17 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
     <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
+        <article class="content">
             @Body
         </article>
     </main>
 </div>
+
+@code { }
+
+<style>
+.top-row { display: flex; }
+.spacer { flex: 1; }
+
+</style>
