--- a/src/Sample.Wasm/Shared/NavMenu.razor
+++ b/src/Sample.Wasm/Shared/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Sample.Wasm</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
+        <a class="navbar-brand" href="">채팅</a>
+        <button title="대화 목록" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
@@ -10,18 +10,13 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
+            <button class="btn btn-primary w-100 mb-2" @onclick="NewChat">
+                <span class="oi oi-plus" aria-hidden="true"></span> 새 대화
+            </button>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="chat">
+                <span class="oi oi-chat" aria-hidden="true"></span> 채팅
             </NavLink>
         </div>
     </nav>
@@ -35,5 +30,12 @@
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    private void NewChat()
+    {
+        // Chat 페이지로 이동하면서 새 대화 시작
+        // 추후 Chat 컴포넌트와 통신하여 새 대화를 시작하도록 구현
+        ToggleNavMenu(); // 메뉴 닫기
     }
 }
