네비게이션 경로 수정 및 base href 변경

--- a/src/Sample.Wasm/Pages/Index.razor
+++ b/src/Sample.Wasm/Pages/Index.razor
@@ -9,6 +9,6 @@
 @code {
 	protected override void OnInitialized()
 	{
-		Nav.NavigateTo("/chat", forceLoad: false);
+		Nav.NavigateTo("chat", forceLoad: false);
 	}
 }
