--- a/src/Sample.Wasm/wwwroot/css/app.css
+++ b/src/Sample.Wasm/wwwroot/css/app.css
@@ -2,6 +2,12 @@
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    /* 기본 스크롤 허용 */
+    overflow: auto;
 }
 
 h1:focus {
