--- a/src/Sample.Wasm/Shared/NavMenu.razor
+++ b/src/Sample.Wasm/Shared/NavMenu.razor
@@ -15,7 +15,7 @@
             </button>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="chat">
+            <NavLink class="nav-link" href="">
                 <span class="oi oi-chat" aria-hidden="true"></span> 채팅
             </NavLink>
         </div>
