--- a/src/Sample.Wasm/_Imports.razor
+++ b/src/Sample.Wasm/_Imports.razor
@@ -8,4 +8,4 @@
 @using Microsoft.JSInterop
 @using Sample.Wasm
 @using Sample.Wasm.Shared
-@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components
